--- a/config-repo/api-gateway.properties
+++ b/config-repo/api-gateway.properties
@@ -1,2 +1,2 @@
-zuul.routes.service-a.path=/service-a/**
-zuul.routes.service-a.serviceId=config-client
+zuul.routes.service-a.path=/config/**
+zuul.routes.service-a.serviceId=application
